--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>TEST</title>
 		<link rel="stylesheet" href="css/style.css" />
-		<script src="main.js" defer></script>
+		<script src="js/main.js" defer></script>
 	</head>
 	<body>
 		<h1>Recherche Etudiant</h1>
-		<form onsubmit="return false;">
+		<form name="searchForm">
 			<fieldset>
 				<legend>Filtre:</legend>
 				<div>
@@ -25,8 +25,8 @@
 					<label for="f-superieur">Supérieur à: </label>
 					<input type="number" name="superieur" id="f-superieur" />
 				</div>
-				<button id="search" onclick="searchStudent()">Rechercher</button>
-				<button id="delete" onclick="deleteStudent()">Supprimer</button>
+				<button id="search" type="button">Rechercher</button>
+				<button id="delete" type="button">Supprimer</button>
 			</fieldset>
 		</form>
 		<div id="results">
